[tool.poetry]
name = "mdv"
version = "0.1.0"
description = ""
authors = ["Mark Ingham <mark.ingham@ly.st>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.18"
streamlit = "^1.28.1"
altair = "^5.1.2"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
